# market-data-transcoder

./: .gitignore  .pylintrc  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: codeql.yml  dependency-review.yml  pylint.yml
examples/: README.md  get_midpoint_per_pair_window.sh  midpoint_per_pair_window.sql
examples/kubernetes-job/: README.md  skaffold.yaml
examples/kubernetes-job/kubernetes-manifests/: Kptfile  file-config.yaml  job.yaml  namespace.yaml  serviceaccount.yaml  setters.yaml
examples/kubernetes-job/wget-init/: Dockerfile
transcoder/: .gitignore  Transcoder.py  __init__.py  command_line.py  main.py  test.py  version.py
transcoder/message/: DatacastField.py  DatacastGroup.py  DatacastParser.py  DatacastSchema.py  ErrorWriter.py  MessageParser.py  MessageUtil.py  NoParser.py  ParsedMessage.py  __init__.py
transcoder/message/exception/: MessageParserNotDefinedError.py  ParserFunctionNotDefinedError.py  __init__.py
transcoder/message/factory/: AsxMessageFactory.py  CmeMessageFactory.py  ITCHMessageFactory.py  MDPMessageFactory.py  MemxMessageFactory.py  MessageFactory.py  __init__.py
transcoder/message/factory/exception/: FactoryNotFoundError.py  TemplateSchemaNotDefinedError.py  __init__.py
transcoder/message/handler/: CmeBinaryPacketHandler.py  ConfiguredMessageHandler.py  FilterHandler.py  MessageHandler.py  MessageHandlerFloatField.py  MessageHandlerIntField.py  MessageHandlerStringField.py  SequencerHandler.py  TimestampPullForwardHandler.py  __init__.py
transcoder/output/: BigQueryOutputManager.py  OutputManager.py  OutputUtil.py  PubSubOutputManager.py  __init__.py
transcoder/output/avro/: AvroOutputManager.py  BaseAvroOutputManager.py  FastAvroOutputManager.py  __init__.py
transcoder/output/diag/: DiagnosticOutputManager.py  __init__.py
transcoder/output/exception/: BigQueryTableSchemaOutOfSyncError.py  OutputFunctionNotDefinedError.py  OutputManagerSchemaError.py  OutputNotAvailableError.py  PubSubTopicSchemaOutOfSyncError.py  __init__.py
transcoder/output/google_cloud/: BigQueryOutputManager.py  Constants.py  PubSubOutputManager.py  __init__.py
transcoder/output/google_cloud/terraform/: BigQueryTerraformOutputManager.py  GcpTerraformOutputManager.py  PubSubTerraformOutputManager.py  __init__.py
transcoder/output/json/: JsonOutputManager.py  __init__.py
transcoder/output/length_delimited/: LengthDelimitedOutputManager.py  __init__.py
transcoder/source/: LineEncoding.py  Source.py  SourceUtil.py  __init__.py
transcoder/source/file/: CmeBinaryPacketFileMessageSource.py  FileMessageSource.py  LengthDelimitedFileMessageSource.py  LineDelimitedFileMessageSource.py  PcapFileMessageSource.py  __init__.py
