[metadata]
name = GCP Cloud FSI Solutions - Market Data Transcoder
version = 0.0.1
description = Market Data Transcoder
long_description = file: README.md
url = https://github.com/GoogleCloudPlatform/market-data-transcoder
project_urls =
    Bug Tracker = https://github.com/GoogleCloudPlatform/market-data-transcoder/issues
keywords = google, gcp, market-data
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2.0
    Operating System :: OS Independent

[project]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >= 3.6

[options.entry_points]
scripts=['bin/txcode']
;https://python-packaging.readthedocs.io/en/latest/command-line-scripts.html
console_scripts =
    txcode = transcoder.command_line:main
