[metadata]
name = market-data-transcoder
version = 0.0.1
description = Market Data Transcoder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GoogleCloudPlatform/market-data-transcoder
project_urls =
    Bug Tracker = https://github.com/GoogleCloudPlatform/market-data-transcoder/issues
keywords = google, gcp, market-data
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[project]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >= 3.6
install_requires =
    avro==1.11.1
    dpkt==1.9.8
    lxml==4.9.2
    numpy==1.24.1
    fastavro==1.7.0
    six>=1.12.0
    google-cloud-pubsub==2.13.11
    google-cloud-bigquery==3.4.1
    pyyaml==6.0

[options.entry_points]
# scripts=['bin/txcode']
;https://python-packaging.readthedocs.io/en/latest/command-line-scripts.html
console_scripts =
    txcode = transcoder.main:main
