[metadata]
name = market-data-transcoder
version = attr: transcoder.__version__
description = Market Data Transcoder
long_description = file: README.md
long_description_content_type = text/markdown
author = Google Cloud FSI Solutions
url = https://github.com/GoogleCloudPlatform/market-data-transcoder
project_urls =
    Bug Tracker = https://github.com/GoogleCloudPlatform/market-data-transcoder/issues
keywords =
    bigquery
    devops
    json
    automation
    schema
    trading
    avro
    binary
    transcoding
    pubsub
    fix
    fixprotocol
    google-cloud-platform
    itch
    sbe
    simple-binary-encoding
    exchanges
    marketdata
    binaryencoding
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >= 3.6
install_requires =
    avro==1.11.1
    dpkt==1.9.8
    lxml==4.9.2
    numpy==1.24.1
    fastavro==1.7.0
    six>=1.12.0
    google-cloud-pubsub==2.13.11
    google-cloud-bigquery==3.4.1
    pyyaml==6.0

[options.entry_points]
# scripts=['bin/txcode']
;https://python-packaging.readthedocs.io/en/latest/command-line-scripts.html
console_scripts =
    txcode = transcoder.main:main
